--- a/fastify-nestjs/src/mail/templates/email-verification-otp.hbs
+++ b/fastify-nestjs/src/mail/templates/email-verification-otp.hbs
@@ -70,7 +70,7 @@
         <p>This OTP is valid for 30 minutes.</p>
         <p>If you did not request this email, please ignore it.</p>
         <div class="button-container">
-            <a href={{url}} class="button">Go to Site</a>
+            <a href={{link}} class="button">Go to Site</a>
         </div>
         <div class="footer">
             <p>Best regards,</p>
