--- a/fastify-nestjs/src/mail/templates/email-verification-otp.hbs
+++ b/fastify-nestjs/src/mail/templates/email-verification-otp.hbs
@@ -74,7 +74,7 @@
         </div>
         <div class="footer">
             <p>Best regards,</p>
-            <p>Zenith Super Car Rental</p>
+            <p>Nest-Fastify App</p>
         </div>
     </div>
 </body>
